--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <title>Siman — Mobile Massage by Vitty</title>
+  <title>Siman — Mobile Massage</title>
   <link rel="stylesheet" href="./styles.css"/>
 </head>
 <body>
@@ -14,7 +14,7 @@
         <div class="logo">S</div>
         <div>
           <div style="font-weight:700">Siman</div>
-          <div class="small muted">Mobile Massage by Vitty</div>
+          <div class="small muted">Mobile Massage</div>
         </div>
       </a>
       <nav class="hide-sm">
