--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
       </a>
       <nav class="hide-sm">
         <a href="#services">Services</a>
+        <a href="#pricing">Pricing</a>
         <a href="#about">About</a>
         <a href="#booking">Booking</a>
+        <a href="#faqs">FAQs</a>
         <a href="#contact">Contact</a>
       </nav>
       <div>
@@ -32,16 +34,30 @@
 
   <main>
     <section class="hero">
-      <img src="https://source.unsplash.com/1600x900/?massage,spa,woman" alt="Relaxing home massage">
-      <div class="overlay"></div>
-      <div class="copy">
-        <div>
-          <span class="badge">Mobile massage for women</span>
-          <h1>Wellness delivered to your door</h1>
-          <p class="lead">Unwind at home with calming, in‑home massage therapies — from pregnancy support to therapeutic care.</p>
-          <div style="margin-top:12px">
-            <a href="#booking" class="btn primary">Book now</a>
-            <a href="#services" class="btn">See services</a>
+      <div class="container section">
+        <div class="hero-grid">
+          <div>
+            <span class="badge">Mobile massage for women</span>
+            <h1 class="h1">Siman — Mobile Massage that comes to you</h1>
+            <p class="lead">Hi, I’m <strong>Vitty</strong> — a single mum who loves helping women slow down. I bring a foldable massage bed to your home and set up in minutes. Whether you’re a busy professional, a homemaker, or a woman enjoying later life, my women‑only service makes self‑care easy and safe.</p>
+            <div style="display:flex;gap:10px;margin-top:16px">
+              <a href="#booking" class="btn primary">Book now</a>
+              <a href="#services" class="btn">See services</a>
+            </div>
+            <div style="display:flex;gap:16px;margin-top:12px" class="muted small">
+              <div class="kv">🚗 I come to you</div>
+              <div class="kv">🛡️ Women-only, safety first</div>
+              <div class="kv">⏱️ Setup in minutes</div>
+            </div>
+          </div>
+          <div>
+            <div class="card" style="aspect-ratio:4/3;border-radius:20px;display:grid;place-items:center;background:#fff">
+              <div style="text-align:center">
+                <div style="font-size:60px">💆‍♀️</div>
+                <div style="font-weight:600;margin-top:6px">Massage at Home</div>
+                <div class="muted small">Foldable bed • Fresh linen • Calming oils</div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -49,61 +65,35 @@
 
     <section id="services" class="section">
       <div class="container">
-        <h2>Services & Pricing</h2>
+        <h2>Services</h2>
         <div class="muted">Gentle, respectful and tailored to your needs. Women of all ages welcome.</div>
-        <div class="grid grid-3" style="margin-top:16px">
-          <div class="card pad service-card">
-            <img src="https://source.unsplash.com/800x600/?aromatherapy,essential-oils" alt="Aromatherapy oils">
-            <div style="font-weight:600">Aromatherapy Massage</div>
-            <div class="muted small">Essential oils to calm the nervous system and lift mood.</div>
-            <div style="margin-top:6px"><strong>$130</strong> / 60m</div>
-          </div>
-          <div class="card pad service-card">
-            <img src="https://source.unsplash.com/800x600/?pregnancy,massage" alt="Prenatal massage">
-            <div style="font-weight:600">Prenatal & Postnatal</div>
-            <div class="muted small">Safe positioning and soothing techniques for mums and mums‑to‑be.</div>
-            <div style="margin-top:6px"><strong>$120</strong> / 60m • <strong>$75</strong> / 30m</div>
-          </div>
-          <div class="card pad service-card">
-            <img src="https://source.unsplash.com/800x600/?hot,stone,massage" alt="Hot stone massage">
-            <div style="font-weight:600">Hot Stone / Relaxation</div>
-            <div class="muted small">Warm stones or light‑medium pressure to melt stress.</div>
-            <div style="margin-top:6px"><strong>$120</strong> / 60m</div>
-          </div>
-          <div class="card pad service-card">
-            <img src="https://source.unsplash.com/800x600/?remedial,massage" alt="Remedial massage">
-            <div style="font-weight:600">Remedial / Swedish</div>
-            <div class="muted small">Therapeutic focus for pain, injury or mobility concerns.</div>
-            <div style="margin-top:6px"><strong>$120</strong> / 60m • <strong>$70</strong> / 30m</div>
-          </div>
-          <div class="card pad service-card">
-            <img src="https://source.unsplash.com/800x600/?scalp,massage,spa" alt="Head massage">
-            <div style="font-weight:600">Head & Shoulder</div>
-            <div class="muted small">Ease desk‑tension and tight shoulders.</div>
-            <div style="margin-top:6px"><strong>$65</strong> / 30m</div>
-          </div>
-          <div class="card pad service-card">
-            <img src="https://source.unsplash.com/800x600/?foot,reflexology,massage" alt="Foot reflexology">
-            <div style="font-weight:600">Foot Reflexology</div>
-            <div class="muted small">Stimulate pressure points for whole‑body balance.</div>
-            <div style="margin-top:6px"><strong>$65</strong> / 30m</div>
-          </div>
-        </div>
-        <div class="caption">Images served via Unsplash source API / royalty‑free usage; see license links in footer.</div>
+        <div id="servicesCards" class="row row-4" style="margin-top:16px"></div>
+      </div>
+    </section>
+
+    <section id="pricing" class="section" style="background:#fff5f7">
+      <div class="container">
+        <h2>Simple pricing</h2>
+        <div class="muted">No travel fees in local service area. Add $20 for evenings after 7pm.</div>
+        <div id="pricingCards" class="row row-4" style="margin-top:16px"></div>
       </div>
     </section>
 
     <section id="about" class="section">
-      <div class="container grid grid-2">
+      <div class="container row row-2">
         <div>
-          <h2>About Siman</h2>
-          <p>Hi, I’m <strong>Chaman (Vitty)</strong> — a qualified massage therapist certified in Sydney. I’m passionate about supporting women’s health and wellbeing through personalised, professional massage therapy in the comfort of your own home.</p>
-          <p>The inspiration behind launching my mobile massage business came during my pregnancy with my first child. That experience made me realise how important it is to have access to quality care at home, especially for women, the elderly, or anyone facing mobility challenges.</p>
-          <p>Since 2018, I’ve focused on compassionate, tailored treatments. No two bodies are the same — my techniques adapt to each client. I’m also studying Reiki to deepen my practice.</p>
+          <h2>About Vitty</h2>
+          <p class="muted">I’m a single working mum who finds joy in helping other women feel grounded again. I understand the pressure of balancing a career, home, and family — which is why I created <strong>Siman</strong>, a women‑only mobile massage service. I bring a professional, foldable massage bed, fresh linens and calming oils, and I set up in minutes so you can reclaim an hour just for you.</p>
+          <ul class="clean">
+            <li>Qualified therapist with a gentle, respectful approach.</li>
+            <li>Women only. Your comfort and safety come first.</li>
+            <li>I come to you — home, hotel or workplace.</li>
+          </ul>
         </div>
-        <div class="card pad">
-          <div style="font-weight:600">Women‑only mobile massage</div>
-          <div class="muted small">Safety and comfort first • We come to you • Set up in minutes</div>
+        <div class="card pad" style="text-align:center">
+          <div style="font-size:50px">🛏️</div>
+          <div style="font-weight:600">Foldable massage bed</div>
+          <div class="muted small">Set up in minutes, fits small spaces, hygienic linens.</div>
         </div>
       </div>
     </section>
@@ -112,7 +102,7 @@
       <div class="container">
         <h2>Real‑time booking</h2>
         <div class="muted">Choose a time that works for you. Only available times are shown. <span class="small">(Times are local)</span></div>
-        <div class="grid grid-2" style="margin-top:16px">
+        <div class="row row-2" style="margin-top:16px">
           <div class="card pad">
             <form id="bookingForm" class="form-grid">
               <div>
@@ -141,7 +131,7 @@
               <div class="small muted">We’ll confirm by email/SMS once your booking is accepted. No payment is taken until confirmed (demo).</div>
             </form>
           </div>
-          <div class="grid" style="gap:16px">
+          <div class="row" style="gap:16px">
             <div id="adminPanel" class="card pad" style="display:none">
               <div style="display:flex;align-items:center;gap:8px;margin-bottom:8px"><strong>Vitty's Availability (Admin)</strong><span class="badge">Local only</span></div>
               <div id="adminDays" class="grid-7" style="margin-bottom:12px"></div>
@@ -158,24 +148,43 @@
               <div style="display:flex;align-items:center;gap:8px;margin-bottom:8px"><strong>Incoming Requests</strong></div>
               <div id="noBookings" class="small muted">No requests yet.</div>
               <table class="table"><tbody id="bookingsBody"></tbody></table>
+              <div class="small muted" style="margin-top:8px">Tip: use Export/Import in Availability to back up or move data.</div>
             </div>
-            <div class="card pad note">
-              <strong>Note:</strong> This is a demo booking widget for GitHub Pages (no server). To accept/cancel requests, please contact us via email.
+            <div class="card pad">
+              <strong>How it works</strong>
+              <ol class="clean">
+                <li>Pick your treatment, date and time.</li>
+                <li>Tell me your suburb and any access details.</li>
+                <li>I confirm your booking and arrive with my foldable bed, linens and oils.</li>
+                <li>Relax. I set up in minutes and pack down quietly.</li>
+              </ol>
             </div>
           </div>
         </div>
       </div>
     </section>
 
+    <section id="faqs" class="section">
+      <div class="container">
+        <h2>FAQs</h2>
+        <div class="row row-2" style="margin-top:12px">
+          <div class="card pad"><div style="font-weight:600">Do you bring everything?</div><div class="muted small">Yes — professional foldable bed, fresh linens, oils and music if you’d like.</div></div>
+          <div class="card pad"><div style="font-weight:600">Which areas do you service?</div><div class="muted small">Eastern Suburbs and Inner Sydney by default. Get in touch if you’re outside this area.</div></div>
+          <div class="card pad"><div style="font-weight:600">Is this a women‑only service?</div><div class="muted small">Yes. Siman is dedicated to women of all ages for comfort and safety.</div></div>
+          <div class="card pad"><div style="font-weight:600">What if I need to cancel?</div><div class="muted small">Please give at least 24 hours notice where possible.</div></div>
+          <div class="card pad"><div style="font-weight:600">How do I pay?</div><div class="muted small">Secure link sent after confirmation. No payment taken until booking is accepted (demo).</div></div>
+        </div>
+      </div>
+    </section>
+
     <section id="contact" class="section">
-      <div class="container grid grid-2">
+      <div class="container row row-2">
         <div>
           <h2>Contact</h2>
-          <div class="muted">We bring care to your home.</div>
-          <div style="margin-top:10px" class="muted">
-            <div>📞 0422 727 322</div>
-            <div>✉️ <a href="mailto:simanmassage@gmail.com">simanmassage@gmail.com</a></div>
-            <div>📍 Mobile massage (we come to you)</div>
+          <div class="muted">Have a question? Prefer to chat before booking? I’d love to hear from you.</div>
+          <div style="margin-top:10px" class="muted small">
+            <div>📞 0400 000 000</div>
+            <div>✉️ hello@simanmassage.com</div>
           </div>
         </div>
         <div class="card pad">
@@ -192,14 +201,15 @@
       <div style="display:flex;justify-content:space-between;gap:12px;flex-wrap:wrap">
         <div>© <span id="year"></span> Siman Massage. All rights reserved.</div>
         <div style="display:flex;gap:10px">
-          <a href="#services">Services</a><a href="#about">About</a><a href="#booking">Book</a><a href="#contact">Contact</a>
+          <a href="#faqs">FAQs</a><a href="#contact">Contact</a><a href="#booking">Book</a>
         </div>
       </div>
-      <div class="caption">Images served from Unsplash (source API) and suitable for commercial use under Unsplash license. See licenses: Unsplash / Pexels.</div>
     </div>
   </footer>
 
-  <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
+  <script>
+    document.getElementById('year').textContent = new Date().getFullYear();
+  </script>
   <script src="./app.js"></script>
 </body>
 </html>
