--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
   <main>
     <section class="hero">
-      <img src="image/relax.jpg" alt="Relaxing home massage">
+      <img src="image/Relax.jpg" alt="Relaxing home massage">
       <div class="container section">
         <div class="hero-grid">
           <div>
