--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
   </header>
 
   <main>
-    <section class="hero">
-      <img src="image/Relax.jpg" alt="Relaxing home massage">
-      <div class="container section">
-        <div class="hero-grid">
+<section class="hero">
+  <img src="images/Relax.JPG" alt="Relaxing home massage">
+  <div class="overlay"></div>
+  <div class="copy">
           <div>
             <span class="badge">Mobile massage for women</span>
             <h1 class="h1">Siman — Mobile Massage that comes to you</h1>
